--- a/Formação Frontend Alura/css/style.css
+++ b/Formação Frontend Alura/css/style.css
@@ -1,52 +1,150 @@
-body {
-
+header {
+    background: #BBBBBB;
+    padding: 20px 0;
+}
+.caixa {
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
+}
+nav {
+    position: absolute;
+    top: 110px;
+    right: 0;
 }
 
-.principal {
-    background-color: #cccccc;
-    padding: 30px;
-}
-
-.titulo-principal {
-    padding-left: 20px;
-}
-
-#banner {
-    width: 100%;
-}
-
-.titulo-centralizado {
-    text-align: center;
-}
-
-p {
-    text-align: center;
-}
-
-#missao {
-    font-size: 20px;
-}
-
-em strong {
-    color: red;
-}
-
-.beneficios {
-    background-color: #FFFFFF;
-    padding: 20px;
-}
-
-ul {
+nav li {
     display: inline-block;
+    margin: 0 0 0 15px;
+}
+
+nav a {
+    text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+}
+
+nav a:hover {
+    color: #c78c19;
+    text-decoration: underline;
+}
+
+.produtos {
+    width: 940px;
+    margin: 0 auto;
+    padding: 40px 0;
+}
+
+.produtos li {
+    display: inline-block;
+    text-align: center;
+    width: 30%;
     vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
+    padding: 30px 20px;
+    margin: 0 1.5%;
+    box-sizing: border-box;
+    border: 2px solid #000000;
+    border-radius: 10px;
 }
 
-.itens {
-    font-style: italic;
+.produtos li:hover {
+    border-color: #c78c19;
 }
 
-.imagem_beneficios {
+.produtos li:hover h2 {
+    font-size: 34px;
+    transition: 0.5s;
+}
+
+.produtos li:active {
+    border-color: #088c19;
+}
+
+.produtos h2 {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.producao-descricao {
+    font-size: 18px;
+}
+
+.produto-preco {
+    font-weight: bold;
+    font-size: 22px;
+    margin-top: 10px;
+}
+
+footer {
+    text-align: center;
+    background: url(../assets/img/bg.jpg);
+    padding: 40px 0;
+}
+
+.copyright {
+    color: white;
+    font-size: 13px;
+    margin-top: 20px;
+}
+
+main {
+    width: 940px;
+    margin: 0 auto;
+}
+
+form {
+    margin: 40px 0;
+}
+
+form label, legend{
+    display: block;
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.input-padrao {
+    display: block;
+    margin-bottom: 20px;
+    padding: 10px 25px;
     width: 50%;
+}
+
+.checkbox {
+    margin: 20px 0;
+}
+
+.enviar {
+    width: 40%;
+    padding: 15px 0;
+    background: white;
+    color: orange;
+    font-weight: bold;
+    font-size: 18px;
+    border: 1px solid orange;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.enviar:hover {
+    background: orange;
+    color: white;
+    transition: 0.3s;
+    transform: scale(1.2);
+}
+
+table {
+    margin: 20px 0 40px;
+}
+
+thead {
+    background: #555555;
+    color: white;
+    font-weight: bbold;
+}
+
+th, td {
+    border: 1px solid #000000;
+    padding: 8px 15px;
 }
