--- a/Formação Frontend Alura/css/style.css
+++ b/Formação Frontend Alura/css/style.css
@@ -1,188 +1,327 @@
 body {
-    font-family: 'Montserrat', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 }
 
 header {
-    background: #BBBBBB;
-    padding: 20px 0;
+	background: #BBBBBB;
+	padding: 20px 0;
 }
+
 .caixa {
-    position: relative;
-    width: 940px;
-    margin: 0 auto;
+	position: relative;
+	width: 940px;
+	margin: 0 auto;
 }
+
 nav {
-    position: absolute;
-    top: 110px;
-    right: 0;
+	position: absolute;
+	top: 110px;
+	right: 0;
 }
 
 nav li {
-    display: inline-block;
-    margin: 0 0 0 15px;
+	display: inline;
+	margin: 0 0 0 15px;
 }
 
 nav a {
-    text-transform: uppercase;
-    color: #000000;
-    font-weight: bold;
-    font-size: 22px;
-    text-decoration: none;
+	text-transform: uppercase;
+	color: #000000;
+	font-weight: bold;
+	font-size: 22px;
+	text-decoration: none;
 }
 
 nav a:hover {
-    color: #c78c19;
-    text-decoration: underline;
+	color: #C78C19;
+	text-decoration: underline;
 }
 
 .produtos {
-    width: 940px;
-    margin: 0 auto;
-    padding: 40px 0;
+	width: 940px;
+	margin: 0 auto;
+	padding: 50px 0;
 }
 
 .produtos li {
-    display: inline-block;
-    text-align: center;
-    width: 30%;
-    vertical-align: top;
-    padding: 30px 20px;
-    margin: 0 1.5%;
-    box-sizing: border-box;
-    border: 2px solid #000000;
-    border-radius: 10px;
+	display: inline-block;
+	text-align: center;
+	width: 30%;
+	vertical-align: top;
+	margin: 0 1.5%;
+	padding: 30px 20px;
+	box-sizing: border-box;
+	border: 2px solid #000000;
+	border-radius: 10px;
 }
 
 .produtos li:hover {
-    border-color: #c78c19;
-}
-
-.produtos li:hover h2 {
-    font-size: 34px;
-    transition: 0.5s;
+	border-color: #C78C19;
 }
 
 .produtos li:active {
-    border-color: #088c19;
+	border-color: #088C19;	
+}
+
+.produtos li:hover h2 {
+	font-size: 34px;
 }
 
 .produtos h2 {
-    font-size: 30px;
-    font-weight: bold;
+	font-size: 30px;
+	font-weight: bold;
 }
 
-.producao-descricao {
-    font-size: 18px;
+.produto-descricao {
+	font-size: 18px;
 }
 
 .produto-preco {
-    font-weight: bold;
-    font-size: 22px;
-    margin-top: 10px;
+	font-size: 22px;
+	font-weight: bold;
+	margin-top: 10px;
 }
 
 footer {
-    text-align: center;
-    background: url(../assets/img/bg.jpg);
-    padding: 40px 0;
+	text-align: center;
+	background: url("../assets/img/bg.jpg");
+	padding: 40px 0;
 }
 
 .copyright {
-    color: white;
-    font-size: 13px;
-    margin-top: 20px;
+	color: #FFFFFF;
+	font-size: 13px;
+	margin: 20px 0 0;
 }
 
 main {
-    width: 940px;
-    margin: 0 auto;
+
 }
 
 form {
-    margin: 40px 0;
+	margin: 40px 0;
 }
 
-form label, legend{
-    display: block;
-    font-size: 20px;
-    margin-bottom: 10px;
+form label, form legend {
+	display:block;
+	font-size: 20px;
+	margin: 0 0 10px;
 }
 
 .input-padrao {
-    display: block;
-    margin-bottom: 20px;
-    padding: 10px 25px;
-    width: 50%;
+	display: block;
+	margin: 0 0 20px;
+	padding: 10px 25px;
+	width: 50%;
 }
 
 .checkbox {
-    margin: 20px 0;
+	margin: 20px 0;
 }
 
 .enviar {
-    width: 40%;
-    padding: 15px 0;
-    background: white;
-    color: orange;
-    font-weight: bold;
-    font-size: 18px;
-    border: 1px solid orange;
-    border-radius: 5px;
-    cursor: pointer;
+	width:40%;
+	padding: 15px 0;
+	background: orange;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	border: none;
+	border-radius: 5px;
+	transition: 1s all;
+	cursor: pointer;
 }
 
 .enviar:hover {
-    background: orange;
-    color: white;
-    transition: 0.3s;
-    transform: scale(1.2);
+	background: darkorange;
+	transform: scale(1.2);
 }
 
 table {
-    margin: 20px 0 40px;
+	margin: 20px 0 40px;
 }
 
 thead {
-    background: #555555;
-    color: white;
-    font-weight: bbold;
+	background: #555555;
+	color: white;
+	font-weight: bold;
 }
 
-th, td {
-    border: 1px solid #000000;
-    padding: 8px 15px;
+td, th {
+	border: 1px solid #000000;
+	padding: 8px 15px;
 }
+
 
 /* css da página inicial */
 .banner {
-    width: 100%;
+	width:100%;
 }
 
 .titulo-principal {
-    text-align: center;
-    font-size: 2em;
-    margin-bottom: 1em;
-    clear: left;
+	text-align: center;
+	font-size: 2em;
+	margin: 0 0 1em;
+	clear: left;
+}
+
+.principal {
+	padding: 3em 0;
+	background: #fefefe;
+	width: 940px;
+	margin: 0 auto;
 }
 
 .principal p {
-    margin-bottom: 1em;
+	margin: 0 0 1em;
 }
 
 .principal strong {
-    font-weight: bold;
+	font-weight: bold;
 }
 
 .principal em {
-    font-style: italic;
+	font-style: italic;
+}
+
+.mapa {
+	padding: 3em 0;
+	background: linear-gradient(#fefefe, #888888);
+}
+
+.mapa p {
+	margin: 0 0 2em;
+	text-align: center;
+}
+
+.mapa-conteudo {
+	width: 940px;
+	margin: 0 auto;
 }
 
 .utensilios {
-    width: 120px;
-    float: left;
-    margin: 0 20px 20px 0;
+	width: 120px;
+	float: left;
+	margin: 0 20px 20px 0;
 }
 
-.imagem_beneficios {
-    width: 60%;
+.beneficios {
+	padding: 3em 0;
+	background: #888888;
+}
+
+.conteudo-beneficios {
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-beneficios {
+    width: 40%;
+	display: inline-block;
+	vertical-align: top;
+}
+
+.itens {
+	line-height: 1.5;
+}
+
+.itens:before {
+	content: "✭";
+}
+
+.itens:first-child{
+	font-weight: bold;
+}
+
+.imagem-beneficios {
+	width: 60%;
+	opacity: 1;
+	box-shadow: 10px 10px 10px black;
+}
+
+.imagem-beneficios:hover {
+	transition: 400ms;
+	opacity: 0.3;
+}
+
+.video {
+	width: 560px;
+	margin: 2em auto;
+}
+
+@media screen and (max-width: 768px) {
+	.caixa, .principal, .mapa-conteudo, .conteudo-beneficios, .video {
+		width: 100%;
+	}
+
+	.principal, .mapa {
+		padding-bottom: 0;
+	}
+
+	h1 img {
+		padding-left: 20px;
+	}
+
+	nav {
+		right: 20px;
+	}
+
+	.utensilios {
+		margin: 0 20px 0 20px;
+	}
+
+	.principal p {
+		margin: 0 20px 20px 20px;
+		text-align: justify;
+	}
+
+	.conteudo-beneficios {
+		width: calc(100% - 40px)
+	}
+
+	.video {
+		margin-bottom: 0;
+	}
+}
+
+@media screen and (max-width: 425px) {
+	h1 {
+		text-align: center;
+	}
+
+	h1 img {
+		padding: 0;
+	}
+
+	nav {
+		position: static;
+		text-align: center;
+	}
+
+	nav ul li:first-child {
+		margin: 0;
+	}
+
+
+	.lista-beneficios, .imagem-beneficios {
+		width: 100%;
+	}
+
+	.lista-beneficios {
+		margin: 0 0 20px 0
+	}
+
+	@media screen and (max-width: 320px) {
+		nav a {
+			font-size: 19px;
+		}
+
+		nav ul li {
+			margin: 0 0 0 5px;
+		}
+
+		nav ul li:first-child {
+			margin: 0;
+		}
+	}
 }
