--- a/Formação Frontend Alura/css/style.css
+++ b/Formação Frontend Alura/css/style.css
@@ -35,6 +35,7 @@ nav a {
 nav a:hover {
 	color: #C78C19;
 	text-decoration: underline;
+	cursor: pointer;
 }
 
 .produtos {
@@ -51,20 +52,18 @@ nav a:hover {
 	margin: 0 1.5%;
 	padding: 30px 20px;
 	box-sizing: border-box;
-	border: 2px solid #000000;
+	border: 2px solid white;
 	border-radius: 10px;
 }
 
 .produtos li:hover {
-	border-color: #C78C19;
+	border-color: black;
+	transition: 1s;
+	cursor: pointer;
 }
 
 .produtos li:active {
-	border-color: #088C19;	
-}
-
-.produtos li:hover h2 {
-	font-size: 34px;
+	border-color: #088C19;
 }
 
 .produtos h2 {
@@ -94,16 +93,15 @@ footer {
 	margin: 20px 0 0;
 }
 
-main {
-
-}
+main {}
 
 form {
 	margin: 40px 0;
 }
 
-form label, form legend {
-	display:block;
+form label,
+form legend {
+	display: block;
 	font-size: 20px;
 	margin: 0 0 10px;
 }
@@ -120,7 +118,7 @@ form label, form legend {
 }
 
 .enviar {
-	width:40%;
+	width: 40%;
 	padding: 15px 0;
 	background: orange;
 	color: white;
@@ -135,6 +133,7 @@ form label, form legend {
 .enviar:hover {
 	background: darkorange;
 	transform: scale(1.2);
+	cursor: pointer;
 }
 
 table {
@@ -147,7 +146,8 @@ thead {
 	font-weight: bold;
 }
 
-td, th {
+td,
+th {
 	border: 1px solid #000000;
 	padding: 8px 15px;
 }
@@ -155,7 +155,7 @@ td, th {
 
 /* css da página inicial */
 .banner {
-	width:100%;
+	width: 100%;
 }
 
 .titulo-principal {
@@ -211,12 +211,12 @@ td, th {
 }
 
 .conteudo-beneficios {
-    width: 640px;
-    margin: 0 auto;
+	width: 640px;
+	margin: 0 auto;
 }
 
 .lista-beneficios {
-    width: 40%;
+	width: 40%;
 	display: inline-block;
 	vertical-align: top;
 }
@@ -229,7 +229,7 @@ td, th {
 	content: "✭";
 }
 
-.itens:first-child{
+.itens:first-child {
 	font-weight: bold;
 }
 
@@ -242,6 +242,7 @@ td, th {
 .imagem-beneficios:hover {
 	transition: 400ms;
 	opacity: 0.3;
+	cursor: pointer;
 }
 
 .video {
@@ -250,12 +251,38 @@ td, th {
 }
 
 @media screen and (max-width: 768px) {
-	.caixa, .principal, .mapa-conteudo, .conteudo-beneficios, .video {
+
+	.caixa,
+	.produtos,
+	.principal,
+	.mapa-conteudo,
+	.conteudo-beneficios,
+	.video {
 		width: 100%;
 	}
 
-	.principal, .mapa {
+	.principal,
+	.mapa {
 		padding-bottom: 0;
+	}
+
+	.produtos {
+		text-align: center;
+	}
+
+	.produtos li {
+		margin: 0 1%;
+		border-color: black;
+
+	}
+
+	.produtos h2 {
+		font-size: 25px;
+		font-weight: bold;
+	}
+
+	.produtos img {
+		max-width: 60%;
 	}
 
 	h1 img {
@@ -302,26 +329,36 @@ td, th {
 		margin: 0;
 	}
 
+	.produtos {
+		padding: 0;
+	}
 
-	.lista-beneficios, .imagem-beneficios {
+	.produtos li {
+		display: block;
+		width: calc(100% - 40px);
+		margin: 20px;
+	}
+
+	.lista-beneficios,
+	.imagem-beneficios {
 		width: 100%;
 	}
 
 	.lista-beneficios {
 		margin: 0 0 20px 0
 	}
+}
 
-	@media screen and (max-width: 320px) {
-		nav a {
-			font-size: 19px;
-		}
+@media screen and (max-width: 320px) {
+	nav a {
+		font-size: 19px;
+	}
 
-		nav ul li {
-			margin: 0 0 0 5px;
-		}
+	nav ul li {
+		margin: 0 0 0 5px;
+	}
 
-		nav ul li:first-child {
-			margin: 0;
-		}
+	nav ul li:first-child {
+		margin: 0;
 	}
 }
