--- a/Formação Frontend Alura/css/style.css
+++ b/Formação Frontend Alura/css/style.css
@@ -54,11 +54,13 @@ nav a:hover {
 	box-sizing: border-box;
 	border: 2px solid white;
 	border-radius: 10px;
+	background-color: #FFFFFF;
 }
 
 .produtos li:hover {
+	filter: invert(1);
 	border-color: black;
-	transition: 1s;
+	transition: 400ms;
 	cursor: pointer;
 }
 
@@ -93,8 +95,6 @@ footer {
 	margin: 20px 0 0;
 }
 
-main {}
-
 form {
 	margin: 40px 0;
 }
@@ -110,34 +110,58 @@ form legend {
 	display: block;
 	margin: 0 0 20px;
 	padding: 10px 25px;
-	width: 50%;
+	width: 886px;
+}
+
+.grid-inputs {
+	display: grid;
+	text-align: center;
+}
+
+.grid-inputs li {
+	width: 100%;
+	margin: 20px 0;
+}
+
+.input-radio label{
+	display: inline-block;
+	width: 12%;
+	font-size: 16px;
+}
+
+select {
+	width: 940px;
+	font-size: 16px;
+	padding: 10px 25px;
 }
 
 .checkbox {
-	margin: 20px 0;
+	margin: 0;
 }
 
 .enviar {
 	width: 40%;
 	padding: 15px 0;
-	background: orange;
-	color: white;
+	background: white;
+	color: black;
 	font-weight: bold;
 	font-size: 18px;
-	border: none;
+	border: 1px solid black;
 	border-radius: 5px;
-	transition: 1s all;
+	transition: 400ms all;
 	cursor: pointer;
 }
 
 .enviar:hover {
-	background: darkorange;
-	transform: scale(1.2);
+	background: black;
+	color: white;
 	cursor: pointer;
 }
 
 table {
-	margin: 20px 0 40px;
+	text-align: center;
+	margin: 20px auto 40px;
+	width: 900px;
 }
 
 thead {
