--- a/arquitetura-css-assets/assets/css/banner/banner-imagem.css
+++ b/arquitetura-css-assets/assets/css/banner/banner-imagem.css
@@ -1,4 +1,9 @@
 .banner__imagem {
+    /* background-image: url('../../img/banner.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; */
+    background: url('../../img/banner.jpg') no-repeat center  / cover;
     height: calc(100vh - 72px); /* entender melhor essa medida vh */
     width: 100%;
 }
