--- a/arquitetura-css-assets/assets/css/receita/receita.css
+++ b/arquitetura-css-assets/assets/css/receita/receita.css
@@ -1,5 +1,6 @@
 .receita {
     background: #fdfdfd;
+    border-radius: 5px;
     display: flex;
     flex-direction: column;
     margin: 0 5rem 5rem 0;
