--- a/alura-typer/public/css/estilos.css
+++ b/alura-typer/public/css/estilos.css
@@ -1,6 +1,7 @@
 .campo-digitacao {
     font-size: 20px;
     height: 130px;
+    border: 3px solid black;
 }
 
 .frase {
@@ -22,4 +23,4 @@
 
 .borda-vermelha {
     border: 3px solid red;
-} 
+}
