--- a/alura-typer/public/css/estilos.css
+++ b/alura-typer/public/css/estilos.css
@@ -29,6 +29,19 @@ body {
     border: 3px solid red;
 }
 
-.placar {
+.placar, #spinner {
     display: none;
+}
+
+#erro {
+    color: red;
+    display: none;
+}
+
+#frase-id {
+    width: 40px;
+}
+
+#botao-sync {
+    float: right;
 }
